fixed delete for place and yml
